added some examples

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,7 +31,8 @@
             "prefix": "inst",
             "style": "kebab-case"
           }
-        ]
+        ],
+        "no-multiple-empty-lines": "off"
       }
     },
     {
@@ -42,7 +43,9 @@
         "plugin:@angular-eslint/template/recommended",
         "plugin:@angular-eslint/template/accessibility"
       ],
-      "rules": {}
+      "rules": {
+        "no-multiple-empty-lines": "off"
+      }
     },
     {
       "files": ["*.html"],
